--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
-    
+    font-size: 20px;
 }
 
 .flex{
     display: flex;
+}
+
+.flex-column{
+    display: flex;
+    flex-direction: column;
 }
 
 .boxed{
@@ -31,10 +37,20 @@ body{
 }
 
 .section-row{
-    padding: 2em;
+    padding: 3em;
 }
 
-/*  */
+.bigger-button{
+    padding: 15px 20px;
+    margin: 10px;
+    font-weight: 600;
+}
+
+.black-button{
+    background-color: #212A2A;
+}
+
+/* INZIO HEADER */
 
 .nav-box{
     padding-top: 1em;
@@ -54,7 +70,7 @@ body{
 .nav-links{
     min-width: 60%;
     justify-content: space-around;
-    font-size: 1.5em;
+
 }
 
 li {
@@ -87,42 +103,44 @@ li {
 }
 
 .main-title{
-    font-size: 4em;
     margin-bottom: 40px;
 }
 
 .main-paragraph{
-    font-size: 1.5em;
     text-align: center;
     margin-bottom: 20px;
 }
 
-.bigger-button{
-    padding: 15px 20px;
-    margin: 10px;
-    font-weight: 600;
-}
+/* FINE HEADER */
 
-.open-brw{
-    background-color: #212A2A;
-
-}
+/* INIZIO MAIN */
 
 .bg-grey{
-    background-color: grey; 
+    background-color: #F6F6F6; 
+}
+
+.img-w-100{
+    width: 100%;
 }
 
 .image-column{
-    background-color: aqua;
     width: 60%;
-    min-height: 400px;
-    
+}
+
+.column-space{
+    justify-content: space-between;
 }
 
 .text-column{
-    background-color: bisque;
-    width: 40%;
-    min-height: 400px;
+    width: 30%;
+    padding-top: 35px;
+    align-items: end;
+}
+
+
+.title{
+    font-size: 2em;
+    margin-bottom: 20px;
 }
 
 .green-box{
